// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render partial props should not render anything when not getting onChange 1`] = `
<input
  className="form-control my-3 fs-1 p-4"
  onChange={[Function]}
  placeholder="Search..."
  type="text"
  value=""
/>
`;

exports[`render partial props should not render anything when not getting value 1`] = `
<input
  className="form-control my-3 fs-1 p-4"
  onChange={[Function]}
  placeholder="Search..."
  type="text"
/>
`;

exports[`render should render Search component 1`] = `
<input
  className="form-control my-3 fs-1 p-4"
  onChange={[Function]}
  placeholder="Search..."
  type="text"
  value=""
/>
`;

exports[`render with props should not accept onChange if it' not a function 1`] = `
<input
  className="form-control my-3 fs-1 p-4"
  onChange={[Function]}
  placeholder="Search..."
  type="text"
  value=""
/>
`;

exports[`render with props should not accept value if it' not a string 1`] = `
<input
  className="form-control my-3 fs-1 p-4"
  onChange={[Function]}
  placeholder="Search..."
  type="text"
  value={1}
/>
`;

exports[`render with props should render Search component 1`] = `
<input
  className="form-control my-3 fs-1 p-4"
  onChange={[Function]}
  placeholder="Search..."
  type="text"
  value=""
/>
`;

exports[`render without props should not render anything 1`] = `
<input
  className="form-control my-3 fs-1 p-4"
  onChange={[Function]}
  placeholder="Search..."
  type="text"
/>
`;
